--- a/style.css
+++ b/style.css
@@ -36,11 +36,14 @@ html  {
 }
 
 ul, li:first-child {
-	padding-left: 0px;	
+	padding-left: 0px;
+	border-left: 0px thin;
+	border-radius: 10px;
 }
 li:last-child {
 	padding-right: 0px;
-	border-right: none;
+	border-right: 0px thin;
+	border-radius: 10px;
 }
 
 li a, .dropbtn {
