--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ ul {
     overflow: hidden;
     background-color: #4C4C4C;
 	width: auto;
+	max-height: 45px;
 	background: linear-gradient(#4C4C4C, #4C4C4C, #3c3c3c);
 	box-shadow: .5px 1px 25px black;
 }
@@ -37,8 +38,7 @@ html  {
 
 ul, li:first-child {
 	padding-left: 0px;
-	border-left: 0px thin;
-	border-radius: 10px;
+	border-radius: 10px 0px 0px 10px;
 }
 li:last-child {
 	padding-right: 0px;
@@ -176,7 +176,7 @@ hr {
 
 .homeimagetext {
 	padding-top: 12.5%;
-	padding-right: 5%;
+	padding-right: 15%;
 	float: right;
 	text-align: left;
 	color: white;
