--- a/style.css
+++ b/style.css
@@ -40,11 +40,16 @@ ul, li:first-child {
 	border-left: 0px thin;
 	border-radius: 10px;
 }
+
+ul, li:last-child a:hover {
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
 li:last-child {
 	padding-right: 0px;
 	border-right: 0px thin;
-	border-radius: 10px;
 }
+
 
 li a, .dropbtn {
     display: inline-block;
@@ -77,6 +82,7 @@ li.dropdown {
     position: absolute;
 	background-color: #4C4C4C;
     min-width: 150px;
+	margin-left: -75px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -85,13 +91,12 @@ li.dropdown {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;
+    text-align: center;
 	color: white;
 }
 
 .dropdown-content a:hover {
 	background-color: #016092;
-	
 }
 
 .dropdown:hover .dropdown-content {
@@ -160,12 +165,6 @@ html {
 	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
 }
 
-hr {
-	
-	width: 90%;
-
-}
-
 .homeimage {
 	border: 10px solid #4D505E;
 	border-radius: 10px;
@@ -175,13 +174,11 @@ hr {
 }
 
 .homeimagetext {
-	padding-top: 12.5%;
-	padding-right: 5%;
+	padding-top: 8%;
 	float: right;
-	text-align: left;
+	text-align: center;
 	color: white;
 	text-shadow: .5px -.5px 2px black;
-	display: inline-block;
 }
 
 .homeintro{
