--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ ul, li:first-child {
 	border-radius: 10px;
 }
 
+li:first-child {
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+}
+
 ul, li:last-child a:hover {
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
@@ -210,47 +215,19 @@ html {
 	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
 }
 
+.announcments{
+	background-color: #ffffff;
+	width: 100%;
+	margin-left: -10px;
+	padding-right: 20px;
+	border-top: 5px solid #4D505E;
+	float: left;
+	font-size: 19px;
+	text-align: center;
+	line-height: 50px;
+	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
+}
+
 #textintro {
 	padding-left: 25px;
-}
-
-
-
-.photoarchive {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007bff), color-stop(1, #00009c));
-	background:-moz-linear-gradient(top, #007bff 5%, #00009c 100%);
-	background:-webkit-linear-gradient(top, #007bff 5%, #00009c 100%);
-	background:-o-linear-gradient(top, #007bff 5%, #00009c 100%);
-	background:-ms-linear-gradient(top, #007bff 5%, #00009c 100%);
-	background:linear-gradient(to bottom, #007bff 5%, #00009c 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007bff', endColorstr='#00009c',GradientType=0);
-	background-color:#007bff;
-	-moz-border-radius:28px;
-	-webkit-border-radius:28px;
-	border-radius:28px;
-	border:1px solid #ffffff;
-	display:inline-block;
-	margin: 25px;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Georgia;
-	font-size:17px;
-	font-weight:bold;
-	padding:14px 10px;
-	text-decoration:none;
-	text-shadow:1px 1px 6px #000000;
-}
-.photoarchive:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #00009c), color-stop(1, #007bff));
-	background:-moz-linear-gradient(top, #00009c 5%, #007bff 100%);
-	background:-webkit-linear-gradient(top, #00009c 5%, #007bff 100%);
-	background:-o-linear-gradient(top, #00009c 5%, #007bff 100%);
-	background:-ms-linear-gradient(top, #00009c 5%, #007bff 100%);
-	background:linear-gradient(to bottom, #00009c 5%, #007bff 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00009c', endColorstr='#007bff',GradientType=0);
-	background-color:#00009c;
-}
-.photoarchive:active {
-	position:relative;
-	top:1px;
 }
